# slidelens

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  alembic.ini  pyproject.toml  test.py
backend/app/: __init__.py  auth.py  config.py  db.py  deps.py  exception_handlers.py  main.py  middleware.py  queue.py  security.py  seed.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  auth.py  events.py  rehearsals.py  reviews.py
backend/app/services/: __init__.py  downloads.py  email.py  events.py  exceptions.py  file_assets.py  finding_mapper.py  finding_service.py  langfuse_scoring.py  limits.py  rehearsal_service.py  review_service.py  storage.py
backend/core/: __init__.py  aggregate.py  aggregate_schemas.py  annotate.py  constants.py  context.py  fix.py  fix_schemas.py  geometry.py  ingest.py  ingest_errors.py  report.py  report_schemas.py  run.py  schemas.py  transcribe.py
backend/core/analyzers/: __init__.py  base.py  charts.py  crossmodal.py  deck.py  schemas.py  slide.py  zoom.py
backend/core/llm/: __init__.py  client.py  config.py  prompts.py  schemas.py  tracing.py  utils.py
backend/core/prompts/: .gitkeep  chart_label_check.md  chart_reading.md  crossmodal_check.md  deck_analysis.md  same_issue_judge.md  slide_analysis.md  zoom_screening.md
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_initial_schema.py  0007_user_is_admin.py  (+6 more)
backend/observability/: __init__.py  context.py  setup.py
backend/scripts/: test_structured_output.py
backend/tests/: conftest.py
backend/worker/: __init__.py  tasks.py
(+144 files in other folders)
