[project]
name = "slidelens-backend"
version = "0.1.0"
description = "SlideLens backend: FastAPI app, review core library, and worker"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",
    "openai>=1.50",
    "langfuse>=2.0",
    "structlog>=24.0",
    "sentry-sdk>=2.0",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "python-pptx>=1.0",
    "pdf2image>=1.17",
    "pillow>=10.4",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "weasyprint>=69.0",
    "jinja2>=3.1.6",
    "aiosmtplib>=5.1.2",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "email-validator>=2.3.0",
    "arq>=0.28.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
    "redis>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "worker", "observability"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
src = ["app", "core", "worker", "observability", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "worker", "observability"]
